# RTC

./: CMakeLists.txt
include/: algorithms.h  canvas.h  color.h  globaldefinitions.h  id.h  intersection.h  intersections.h  matrix.h  object.h  ray.h  sphere.h  tuple.h
src/: algorithms.cpp  canvas.cpp  color.cpp  id.cpp  intersection.cpp  intersections.cpp  matrix.cpp  object.cpp  ray.cpp  sphere.cpp  tuple.cpp
tests/: canvasFeature.cpp  colorFeature.cpp  matrixFeature.cpp  rayFeature.cpp  transformationFeature.cpp  tuplesFeature.cpp
